// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator erd {
  provider = "prisma-erd-generator"
}

// TODO: Runtime errors occur when this runs
// generator typebox {
//   provider = "prisma-typebox-generator"
// }

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "sqlite"
  url      = "file:./dev.db"
}

model Tile {
  tileHash      String         @id
  data          Bytes
  tileMetadatas TileMetadata[]
}

model TileMetadata {
  quadKey   String
  tileset   Tileset @relation(fields: [tilesetId], references: [id])
  tilesetId String
  tile      Tile    @relation(fields: [tileHash], references: [tileHash])
  tileHash  String

  @@id([quadKey, tilesetId])
}

model Tileset {
  id            String             @id
  // Description of tileset based on TileJSON spec
  tilejson      String
  // Array of urls pulled from tilejson
  tileUrls      String
  etag          String?
  upstreamUrl   String?
  styles        TilesetsOnStyles[]
  tileMetadatas TileMetadata[]
}

model TilesetsOnStyles {
  tileset   Tileset @relation(fields: [tilesetId], references: [id])
  tilesetId String
  style     Style   @relation(fields: [styleId], references: [id])
  styleId   String

  @@id([tilesetId, styleId])
}

model Style {
  id           String             @id
  // JSON string that adheres to style specification v8
  stylejson    String
  etag         String?
  offlineAreas OfflineArea[]
  sprite       Sprite?
  tilesets     TilesetsOnStyles[]
}

model Sprite {
  id           String  @id
  // PNG with all images used in a style
  data         Bytes
  // JSON string describing positions of sprite in data
  layout       String
  pixelDensity Int
  etag         String?
  upstreamUrl  String?
  style        Style   @relation(fields: [styleId], references: [id])
  styleId      String  @unique
}

model Glyph {
  fontName    String
  // e.g.: 0, 1, 2, ...  (Multiply by 256 for lower bound, add 256 for upper)
  rangeId     Int
  data        Bytes
  etag        String?
  upstreamUrl String?

  @@id([fontName, rangeId])
}

model OfflineArea {
  id          String    @id
  timestamp   DateTime  @default(now())
  zoomLevel   Int
  // Comma-separated string of 4 floats
  boundingBox String
  style       Style     @relation(fields: [styleId], references: [id])
  styleId     String
  Download    Download?
}

// TODO: should we add styles_downloaded and tiles_downloaded fields?
model Download {
  id                  String      @id
  // TODO: should this only refer to tiles+glyphs?
  downloadedResources Int
  // TODO: should this only refer to tiles+glyphs?
  totalResources      Int
  // When downloaded = total
  completed           Boolean
  offlineArea         OfflineArea @relation(fields: [areaId], references: [id])
  areaId              String      @unique
}
