//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Tile {
  tileHash String [pk]
  data Bytes [not null]
  tileMetadatas TileMetadata [not null]
}

Table TileMetadata {
  quadKey String [not null]
  tileset Tileset [not null]
  tilesetId String [not null]
  tile Tile [not null]
  tileHash String [not null]

  indexes {
    (quadKey, tilesetId) [pk]
  }
}

Table Tileset {
  id String [pk]
  tilejson String [not null]
  tileUrls String [not null]
  etag String
  upstreamUrl String
  styles TilesetsOnStyles [not null]
  tileMetadatas TileMetadata [not null]
}

Table TilesetsOnStyles {
  tileset Tileset [not null]
  tilesetId String [not null]
  style Style [not null]
  styleId String [not null]

  indexes {
    (tilesetId, styleId) [pk]
  }
}

Table Style {
  id String [pk]
  stylejson String [not null]
  etag String
  offlineAreas OfflineArea [not null]
  sprite Sprite
  tilesets TilesetsOnStyles [not null]
}

Table Sprite {
  id String [pk]
  data Bytes [not null]
  layout String [not null]
  pixelDensity Int [not null]
  etag String
  upstreamUrl String
  style Style [not null]
  styleId String [unique, not null]
}

Table Glyph {
  fontName String [not null]
  rangeId Int [not null]
  data Bytes [not null]
  etag String
  upstreamUrl String

  indexes {
    (fontName, rangeId) [pk]
  }
}

Table OfflineArea {
  id String [pk]
  timestamp DateTime [default: `now()`, not null]
  zoomLevel Int [not null]
  boundingBox String [not null]
  style Style [not null]
  styleId String [not null]
  Download Download
}

Table Download {
  id String [pk]
  downloadedResources Int [not null]
  totalResources Int [not null]
  completed Boolean [not null]
  offlineArea OfflineArea [not null]
  areaId String [unique, not null]
}

Ref: TileMetadata.tilesetId > Tileset.id

Ref: TileMetadata.tileHash > Tile.tileHash

Ref: TilesetsOnStyles.tilesetId > Tileset.id

Ref: TilesetsOnStyles.styleId > Style.id

Ref: Sprite.styleId - Style.id

Ref: OfflineArea.styleId > Style.id

Ref: Download.areaId - OfflineArea.id